# rfui

./: Cargo.toml  LICENSE  README.md  config.toml  default_config.toml
src/: action.rs  args.rs  config.rs  exit_codes.rs  file_system.rs  input.rs  keypress.rs  lib.rs  main.rs  matcher.rs  preview.rs  results.rs  tabs.rs  tui.rs  walk.rs
