[package]
name = "rfd"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
ignore = "0.4"
normpath = "1.3.0"
anyhow = "1.0.98"
regex = "1.11.1"
crossterm = "0.28.1"
ratatui = "0.29.0"
nucleo = "0.5"
colored = "3.0.0"
ansi-to-tui = "7.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
threadpool = "1.8"
embed-file = "0.2.0"
serde_json = "1.0.140"
strip-ansi-escapes = "0.2"
cli-clipboard = "0.4.0"

