[package]
name = "rfd"
version = "0.1.0"
edition = "2021"
description = "A fast, interactive file finder with live preview built in Rust"
authors = ["Dylan Christian Dihalim"]
license = "MIT"
repository = "https://github.com/dylanchristiandihalim/rfd"
homepage = "https://github.com/dylanchristiandihalim/rfd"
documentation = "https://github.com/dylanchristiandihalim/rfd"
readme = "README.md"
keywords = ["file", "finder", "search", "tui", "preview"]
categories = ["command-line-utilities", "filesystem"]
exclude = ["screenshots/", ".github/"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
ignore = "0.4"
normpath = "1.3.0"
anyhow = "1.0.98"
regex = "1.11.1"
crossterm = "0.28.1"
ratatui = "0.29.0"
nucleo = "0.5"
ansi-to-tui = "7.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
embed-file = "0.2.0"
serde_json = "1.0.140"
cli-clipboard = "0.4.0"

